--- a/infarter/Cargo.toml
+++ b/infarter/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["papanumba"]
 edition = "2021"
 description = "DryFart interpreter"
-repository = "https://github.com/papanumba/infarter"
+repository = "https://github.com/papanumba/dryfart"
 license = "GPL-3.0"
 build = "build.rs"
 
