--- a/infarter/Cargo.toml
+++ b/infarter/Cargo.toml
@@ -6,15 +6,17 @@ edition = "2021"
 description = "DryFart interpreter"
 repository = "https://github.com/papanumba/dryfart"
 license = "GPL-3.0"
-build = "build.rs"
+#build = "build.rs"
 
 [dependencies]
-lalrpop-util = { version = "0.20", features = ["lexer"] }
-regex = "1.8.4"
+#lalrpop-util = { version = "0.20", features = ["lexer"] }
+#regex = "1.8.4"
 
-[build-dependencies]
-lalrpop = "0.20"
+#[build-dependencies]
+#lalrpop = "0.20"
 
 [profile.release]
 lto = true
 strip = true
+#panic = "abort"
+#debug = false
