--- a/infarter/Cargo.toml
+++ b/infarter/Cargo.toml
@@ -7,6 +7,9 @@ description = "DryFart interpreter"
 repository = "https://github.com/papanumba/dryfart"
 license = "GPL-3.0"
 
+[dependencies]
+ascii = "1.1"
+
 [profile.release]
 lto = true
 strip = true
