--- a/flatvm/Makefile
+++ b/flatvm/Makefile
@@ -1,6 +1,6 @@
 CC = clang
 CXX = clang++
-CPPFLAGS = -Iinclude
+CPPFLAGS = -Iinclude -g
 CFLAGS = -Wall -Wextra -std=c11 -pedantic
 CXXNOWARN := -Wno-unused-private-field -Wno-unused-parameter
 # -Wno-mismatched-tags
@@ -10,7 +10,7 @@ CXXFLAGS = -std=c++11 -pedantic $(CXXWARN) -O3 -fPIE $(CXXNOWARN)
 
 cxxobjs = disasm.o idents.o loader.o norris.o object.o objref.o values.o
 cxxobjs := $(cxxobjs) main.o
-cobjs = alzhmr.o common.o
+cobjs = alzhmr.o common.o reader.o
 objs = $(cxxobjs) $(cobjs)
 
 #gch := dynarr; idents; values;
