--- a/infarter/Cargo.toml
+++ b/infarter/Cargo.toml
@@ -8,6 +8,7 @@ repository = "https://github.com/papanumba/dryfart"
 license = "GPL-3.0"
 
 [dependencies]
+encoding = "0.2.33"
 num_enum = "0.7.2"
 
 [profile.release]
