--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,12 @@ infarter/*/*.dfc
 infarter/*.df
 infarter/*.py
 flatvm/*.o
+flatvm/*.so
 flatvm/flatvm
 flatvm/clang-build.sh
 flatvm/prof.sh
+flatvm/*/*.o
+flatvm/*/*.so
 dfarted/__pycache__
 dfarted/.tmp.df*
 dfarted/img/icon.xcf
