--- a/infarter/Cargo.toml
+++ b/infarter/Cargo.toml
@@ -10,6 +10,8 @@ license = "GPL-3.0"
 [dependencies]
 encoding = "0.2.33"
 num_enum = "0.7.2"
+strum = "0.26.3"
+strum_macros = "0.26.4"
 
 [profile.release]
 lto = true
