--- a/flatvm/Makefile
+++ b/flatvm/Makefile
@@ -9,7 +9,7 @@ CXXNOWARN := $(CXXNOWARN) -Wno-c++98-compat
 CXXWARN := -Wall -Wextra -Wdeprecated-copy-dtor
 CXXFLAGS = -std=c++17 -pedantic $(CXXWARN) -fPIE #$(CXXNOWARN)
 
-cxxobjs = disasm.o idents.o loader.o norris.o values.o
+cxxobjs = disasm.o idents.o loader.o norris.o values.o virmac.o
 cxxobjs := $(cxxobjs) main.o
 cobjs = common.o latin1.o reader.o
 objs = $(cxxobjs) $(cobjs)
@@ -50,8 +50,8 @@ main.o: src/main.cpp
 %.o: src/%.cpp include/%.h
 	$(CXX) -c $(CPPFLAGS) $(CXXFLAGS) $<
 
-#virmac.o: src/virmac.cpp src/vm-ops.cpp include/virmac.h
-#	$(CXX) -c $(CPPFLAGS) $(CXXFLAGS) $<
+virmac.o: src/virmac.cpp src/vm-ops.cpp include/virmac.h
+	$(CXX) -c $(CPPFLAGS) $(CXXFLAGS) $<
 
 %.o: src/%.c
 	$(CC) -c $(CPPFLAGS) $(CFLAGS) $<
